// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-video> Component <bolt-video> compiles 1`] = `
<bolt-ratio ratio="16/9">
  <ssr-keep for="bolt-ratio"
            class="c-bolt-ratio"
            style="padding-bottom: calc((9 / 16) * 100%); --aspect-ratio: 1.7777777777778;"
  >
    <bolt-video class="js-bolt-video-uuid--12345"
                video-id="4892122320001"
                account-id="1900410236"
                show-meta
                player-id="r1CAdLzTW"
                controls
                share-description="Share This Video"
    >
    </bolt-video>
  </ssr-keep>
</bolt-ratio>
`;

exports[`<bolt-video> Component <bolt-video> compiles with a different \`video-id\` 1`] = `
<bolt-ratio ratio="16/9">
  <ssr-keep for="bolt-ratio"
            class="c-bolt-ratio"
            style="padding-bottom: calc((9 / 16) * 100%); --aspect-ratio: 1.7777777777778;"
  >
    <bolt-video class="js-bolt-video-uuid--12345"
                video-id="5609376179001"
                account-id="1900410236"
                show-meta
                player-id="r1CAdLzTW"
                controls
                share-description="Share This Video"
    >
    </bolt-video>
  </ssr-keep>
</bolt-ratio>
`;

exports[`<bolt-video> Component <bolt-video> compiles with a meta description + meta title 1`] = `
<bolt-ratio ratio="16/9">
  <ssr-keep for="bolt-ratio"
            class="c-bolt-ratio"
            style="padding-bottom: calc((9 / 16) * 100%); --aspect-ratio: 1.7777777777778;"
  >
    <bolt-video class="js-bolt-video-uuid--12345"
                video-id="4892122320001"
                account-id="1900410236"
                show-meta
                show-meta-title
                player-id="r1CAdLzTW"
                controls
                share-description="Share This Video"
    >
    </bolt-video>
  </ssr-keep>
</bolt-ratio>
`;

exports[`<bolt-video> Component <bolt-video> compiles with a meta description 1`] = `
<bolt-ratio ratio="16/9">
  <ssr-keep for="bolt-ratio"
            class="c-bolt-ratio"
            style="padding-bottom: calc((9 / 16) * 100%); --aspect-ratio: 1.7777777777778;"
  >
    <bolt-video class="js-bolt-video-uuid--12345"
                video-id="4892122320001"
                account-id="1900410236"
                show-meta
                player-id="r1CAdLzTW"
                controls
                share-description="Share This Video"
    >
    </bolt-video>
  </ssr-keep>
</bolt-ratio>
`;
